@@ -14,10 +14,6 @@ from compositesystem cimport CompositeSystemImpl
 
 np.import_array()
 
-ctypedef fused ConnectableSystem:
-    CommonSystem
-    CompositeSystem
-
 cdef class Connections:
     """The connections of the system.
     The connections are either from an output or a state of a system.
@@ -29,7 +25,7 @@ cdef class Connections:
         p._c_connectionHandler = ptr
         return p
 
-    def add_connection(self,outputname,ConnectableSystem inputsys,inputname):
+    def add_connection(self,outputname, inputsys,inputname, output_element = None):
         """Connect the outputs from this system to the inputs of another.
 
         The systems that are to be connected must be derived from a
@@ -43,6 +39,8 @@ cdef class Connections:
             The system that is to be connected, that will receive the signals.
         inputname : str
             The name of the input that will receive the signal 
+        output_index (optional): int
+            The index of a vector to use if connecting to a scalar
 
         Raises
         ------
@@ -54,7 +52,13 @@ cdef class Connections:
         bsout =  bytes(outputname,'utf-8')
         bsin =  bytes(inputname,'utf-8')
 
-        if ConnectableSystem is CommonSystem:
-            self._c_connectionHandler.connect[CommonSystemImpl](bsout,(<CommonSystem>inputsys)._c_s,bsin)
-        elif ConnectableSystem is CompositeSystem:
-            self._c_connectionHandler.connect[CompositeSystemImpl](bsout,(<CompositeSystem>inputsys)._c_sys,bsin)
+        if isinstance(inputsys,CommonSystem):
+            if output_element:
+                self._c_connectionHandler.connect[CommonSystemImpl](bsout,(<CommonSystem>inputsys)._c_s,bsin, output_element)
+            else:
+                self._c_connectionHandler.connect[CommonSystemImpl](bsout,(<CommonSystem>inputsys)._c_s,bsin)
+        elif isinstance(inputsys, CompositeSystem):
+            if output_element:
+                self._c_connectionHandler.connect[CompositeSystemImpl](bsout,(<CompositeSystem>inputsys)._c_sys,bsin, output_element)
+            else:
+                self._c_connectionHandler.connect[CompositeSystemImpl](bsout,(<CompositeSystem>inputsys)._c_sys,bsin)
