@@ -89,6 +89,7 @@ extensions = [Extension("pysim.cppsystem",
                           'pysim/systems/defaultsystemcollection1/cppsource/RigidBody.cpp',
                           'pysim/systems/defaultsystemcollection1/cppsource/LogisticMap.cpp',
                           'pysim/systems/defaultsystemcollection1/cppsource/ParameterTestSystem.cpp',
+                          'pysim/systems/defaultsystemcollection1/cppsource/InOutTestSystem.cpp',
                           ],
                           language="c++",
                           extra_compile_args=extracompileargs,
